ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nodejs-app # The URL path to access my app
        pathType: Prefix
        backend:
          service:
            name: nodejs-app-service
            port:
              number: 80
